[project]
name = "ge25519"
version = "1.4.0"
description = """\
    Pure-Python data structure for working with Ed25519 \
    (and Ristretto) group elements and operations.\
    """
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "fe25519~=1.3"
]

[project.urls]
Repository = "https://github.com/nthparty/ge25519"
Documentation = "https://ge25519.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=4.2.0",
    "sphinx-rtd-theme~=1.0.0"
]
test = [
    "pytest~=7.0",
    "pytest-cov~=3.0",
    "parts~=1.5",
    "bitlist~=1.0",
    "fountains~=2.0"
]
lint = [
    "pylint~=2.14.0"
]
coveralls = [
    "coveralls~=3.3.1"
]
publish = [
    "build~=0.8",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools~=62.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=ge25519 --cov-report term-missing"
